fixed z-index of right side events notification div

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,8 +5,9 @@
   font-size: 16px;
 }
 .events_notification_div {
+  z-index: 11;
   position: fixed;
-  background-color: #003f7a;
+  background-color: #184e80;
   right: 0;
   top: 25vh;
   border-top-left-radius: 10px;
@@ -16,14 +17,14 @@
 }
 .events_notification_div_content {
   padding: 10px;
-  padding-left: 5px;
+  padding-left: 0;
 }
 .events_notification_counter {
   position: absolute;
   top: -4px;
   right: -4px;
   border-radius: 100%;
-  border: 3px solid #003f7a;
+  border: 3px solid #184e80;
   text-align: center;
   display: flex;
   flex-direction: column;
